--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
 
-  <h1>🎮 Рандомный PUBG Аккаунт</h1>
+  <h1>🎮 Рандомный PUBG Аккаунт Hello</h1>
   <button onclick="buyRandomAccount()">Купить за 100 Stars</button>
 
   <div id="accountInfo" class="account-info" style="display: none;">
