--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       margin-top: 50px;
-      background: #000;
+      background: #f0ecc6;
       color: #fff;
     }
 
@@ -44,7 +44,7 @@
 
 <body>
 
-  <h1>🎮 Рандомный PUBG Аккаунт Hello</h1>
+  <h1>🎮 Рандомный PUBG Аккаунт</h1>
   <button onclick="buyRandomAccount()">Купить за 100 Stars</button>
 
   <div id="accountInfo" class="account-info" style="display: none;">
@@ -57,11 +57,9 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
   <script>
-    // Инициализация WebApp
     const tg = window.Telegram.WebApp;
     tg.expand(); // Делаем WebApp на полный экран
 
-    // Массив с PUBG аккаунтами
     const accounts = [
       { login: 'player1@example.com', password: 'password123' },
       { login: 'player2@example.com', password: 'abc456' },
@@ -69,31 +67,40 @@
       { login: 'winner@game.com', password: 'victory2024' }
     ];
 
-    // Функция для покупки рандомного аккаунта
     function buyRandomAccount() {
-      if (tg) {
-        // Запрос на оплату 100 Stars
-        tg.requestStarsPayment({
-          amount: 100, // Сумма в Stars (100 = 1 Star)
-          payload: 'buy_random_pubg_account' // Уникальный ID покупки
-        });
+      if (!tg) {
+        alert('❌ Telegram WebApp не доступен.');
+        return;
+      }
 
-        // Обработка события успешной оплаты
-        tg.onEvent('stars_payment_completed', () => {
+      tg.showPopup({
+        title: 'Подтверждение',
+        message: 'Вы уверены, что хотите купить случайный PUBG аккаунт за 100 Stars?',
+        buttons: [
+          { id: 'confirm', type: 'default', text: 'Купить' },
+          { id: 'cancel', type: 'cancel', text: 'Отмена' }
+        ]
+      }, (buttonId) => {
+        if (buttonId === 'confirm') {
+          // Замените "your_invoice_slug" на реальный slug
+          tg.openInvoice({ slug: 'your_invoice_slug' });
+        }
+      });
+
+      tg.onEvent('invoice_closed', (event) => {
+        if (event.status === 'paid') {
           console.log('✅ Оплата прошла успешно!');
 
-          // Выбор случайного аккаунта
           const randomIndex = Math.floor(Math.random() * accounts.length);
           const randomAccount = accounts[randomIndex];
 
-          // Отображение аккаунта
           document.getElementById('login').textContent = randomAccount.login;
           document.getElementById('password').textContent = randomAccount.password;
           document.getElementById('accountInfo').style.display = 'block';
-        });
-      } else {
-        alert('❌ Telegram WebApp не доступен.');
-      }
+        } else {
+          alert('❌ Оплата не была завершена.');
+        }
+      });
     }
   </script>
 
